--- a/pc.css
+++ b/pc.css
@@ -15,8 +15,7 @@ html,body{
 }
 .navmain-div{
     text-align: center;
-    margin: 45px 0px 0px 0px;
-    
+    margin: 45px 0px 0px 0px;  
 }
 
 .about{
@@ -86,12 +85,11 @@ html,body{
 .html,.js,.learning{
     width: 400px;
     height: 200px;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 25px;
-
 }
-.cjs.learning{
-    position: absolute;
+.html:hover,.js:hover,.learning:hover{
+    box-shadow: 2px -2px 20px rgba(111, 0, 166, 0.968);
 }
 .js{
     margin-top: 50px;
@@ -113,7 +111,7 @@ margin: 5px 0px 0px 320px;
     margin: 10px 0px 0px 15px;
 }
 .icon-8{
-    margin: 15px 0px 0px 295px;
+    margin: 15px 0px 0px 290px;
 }
 .icon-9,.icon-10,.icon-11{
     width: 120px;
@@ -163,7 +161,6 @@ transform: rotate(150deg);
     height: 300px;
     border: none;
     border-radius: 30px;
-    box-shadow: 5px 10px 10.5px black;
     position: absolute;
 }
 .project1{
@@ -176,10 +173,12 @@ transform: rotate(150deg);
 .project1:hover{
     margin-top: -20px;
     transition: 0.3s;
+    box-shadow: 5px 2px 26.5px turquoise;
 }
 .project2:hover{
     margin-top: -20px;
  transition: 0.3s;
+ box-shadow: 2px 2px 26.5px turquoise;
 }
 .text6{
     font-size: 80px;
@@ -197,7 +196,9 @@ transform: rotate(150deg);
     margin: -80px 0px 0px 670px;
     position: absolute;
 }
-
+.connect:hover{
+    
+}
 
 .contact{
     border: 2px solid white;
