--- a/pc.css
+++ b/pc.css
@@ -7,11 +7,17 @@ html,body{
 
 .nav2-div a{
     text-decoration: none;
-    color: black;
+    color: white;
     font-size: 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: italic;
   padding: 25px;
+}
+.nav2-div a:hover{
+   background: linear-gradient(to right, red, yellow);
+   -webkit-background-clip: text;
+   background-clip: text;
+ -webkit-text-fill-color: transparent;
 }
 .navmain-div{
     text-align: center;
@@ -117,7 +123,7 @@ margin: 5px 0px 0px 320px;
     width: 120px;
     height: 120px;
     position: absolute;
-    margin: -730px 0px 0px 350px
+    margin: -730px 0px 0px 350px;
 }
 .icon-10{
     margin: -480px 0px 0px 200px
@@ -173,17 +179,21 @@ transform: rotate(150deg);
 .project1:hover{
     margin-top: -20px;
     transition: 0.3s;
-    box-shadow: 5px 2px 26.5px turquoise;
+    box-shadow: 5px 2px 26.5px rgb(28, 139, 204);
 }
 .project2:hover{
     margin-top: -20px;
  transition: 0.3s;
- box-shadow: 2px 2px 26.5px turquoise;
+ box-shadow: 2px 2px 36.5px rgb(28, 139, 204);
 }
 .text6{
     font-size: 80px;
     font-weight: bold;
     margin: 100px 100px 100px 200px;
+    background: linear-gradient(to left, white, orange, red);
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 .connect{
     width: 150px;
@@ -197,17 +207,21 @@ transform: rotate(150deg);
     position: absolute;
 }
 .connect:hover{
-    
+    box-shadow: 5px -2px 25px turquoise;
 }
 
+/* ============================================== */
 .contact{
     border: 2px solid white;
     width: 100%;
+    height: 730px;
+    margin: 0px 0px 0px 0px;  
+    color: white;
+    border: none;
+}
+.holder{
+    width: 100%;
     height: 400px;
-    /* border: none; */
-    margin: 800px 0px 0px 0px;
-   
-     
 }
 .border{
     width: 45px;
@@ -221,15 +235,14 @@ transform: rotate(150deg);
     border-radius:8px;
     position: relative;
 }
-/* .text4{
-  font-size: 55px;
+.text7{
+  font-size: 85px;
   font-weight: bold;
-  margin: 50px 0px 0px 350px;
+  margin: 50px 0px 0px 150px;
   padding-top: 50px;
-  font-family: 'Times New Roman', Times, serif;
-   background: linear-gradient(to right, red, yellow);
-   
-} */
+  font-family: 'Times New Roman', Times, serif; 
+  
+}
 .mailname{
     font-size: 18px;
     margin: -38px 0px 0px 740px;
@@ -252,7 +265,37 @@ border-radius: 18.5px;
 border-radius: 5.5px;
 margin: 0px 0px 0px 100px;
 }
-
-
+footer{
+width: 100%;
+height: 250px;
+background-color: rgb(41, 41, 41);
+}
+.footer-nav a{
+text-decoration: none;
+color: white;
+font-size: 18px;
+float: left;
+padding: 0px 0px 30px 30px;
+}
+.footer-nav a:hover{
+    text-decoration: underline;
+    background: linear-gradient(to right, red, yellow);
+    font-weight: bolder;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+.footer-nav{
+    width: 150px;
+    text-align: center;
+    margin: 80px 0px 0px 500px;
+    position: absolute;
+}
+.copyright{
+    margin: 50px 0px 0px 900px;
+    font-size: 22px;
+    padding-top: 100px;
+    position: absolute;
+}
 
 
