--- a/mobile.css
+++ b/mobile.css
@@ -34,7 +34,7 @@ position: absolute;
 font-weight: lighter;
 }
 .image1-cont{
-    margin: 700px 0px 0px 150px;
+    margin: 730px 0px 0px 50px;
 }
 .icons4d{
     display: none;
@@ -88,24 +88,25 @@ transform: rotate(220deg);
     display: none;
 }
 .text3{
-    margin: 0px 0px 0px 150px;
+    margin: 0px 0px 0px 100px;
     font-size: 100px;
     width: 100%;
     word-spacing: 2px;
     letter-spacing: 1px;
 }
 .text4{
-    margin: 130px 0px 0px 170px;
+    margin: 130px 0px 0px 150px;
     font-size: 50px;
 }
 .skills{
     position: absolute;
-    margin: 350px 0px 0px 100px;
+    margin: 350px 50px 0px 50px;
 }
 .html,.js,.learning{
     width: 1000px;
     height: 450px;
     border: 3px solid white;
+    margin: 0px 0px 200px 0px;
 }
 .icon-6,.icon-7,.icon-8{
     width: 150px;
@@ -120,5 +121,55 @@ transform: rotate(220deg);
 .html:hover,.js:hover,.learning:hover{
     box-shadow: -5px -10px 40px rgba(111, 0, 166, 0.968);
 }
+.projects{
+ height: 1500px;
+    margin: 3200px 0px 0px 0px;
+    
+}
+.project1,.project2{
+    width: 1000px;
+    height: 800px;
+    margin: 25px 0px 0px 50px;
+}
+.project2{
+    margin:  1005px 0px 0px 50px;
+}
+.project2:hover{
+    margin-top: 970px;
+ transition: 0.3s;
+ box-shadow: 2px 2px 36.5px rgb(28, 139, 204);
+}
+.text6{
+    width: 100%;
+    font-size: 120px;
+    position: absolute;
+    margin: 500px 0px 0px 50px;
+}
+.connect{
+    font-size: 60px;
+    width: 300px;
+    height: 100px;
+    border-radius: 25px;
+    margin: 800px 0px 0px 350px;
+}
+
+footer{
+    margin: 900px 0px 0px 0px; 
+    width: 100%;
+}
+.copyright{
+    margin: 0px 0px 0px 0px;
+}
+
+.footer-nav{
+    margin: 0px;
+}
+
+
+
+
+
+
+
 
 }
