--- a/mobile.css
+++ b/mobile.css
@@ -7,6 +7,7 @@
     width: 100%;
   
 }
+
 .about{
     text-align: center;
     font-size: 60px;
@@ -31,7 +32,7 @@ position: absolute;
     width: 100%;
     font-family: sans-serif;
     margin: 250px 0px 0px -50px;
-font-weight: lighter;
+
 }
 .image1-cont{
     margin: 730px 0px 0px 50px;
@@ -145,24 +146,37 @@ transform: rotate(220deg);
     position: absolute;
     margin: 500px 0px 0px 50px;
 }
+
 .connect{
     font-size: 60px;
     width: 300px;
     height: 100px;
-    border-radius: 25px;
+    border-radius: 65px;
+    border: none;
+    font-weight: bold;
+    box-shadow: 2px 2px 20px turquoise;
     margin: 800px 0px 0px 350px;
 }
 
 footer{
-    margin: 900px 0px 0px 0px; 
-    width: 100%;
+    margin: 950px 0px 0px 0px; 
+    width: 115%;
+    height: 400px;
+    /* background-color: white; */
 }
 .copyright{
-    margin: 0px 0px 0px 0px;
+    margin: 230px 0px 0px 330px;
+    font-size: 36px;
+    width: 600px;
+    /* border: 1px solid white; */
 }
-
 .footer-nav{
-    margin: 0px;
+    margin: 25px 0px 0px 450px;
+
+}
+.footer-nav a{
+    margin: 10px 0px 0px 0px;
+    font-size: 45px;
 }
 
 
