--- a/mobile.css
+++ b/mobile.css
@@ -3,7 +3,7 @@
     font-size: 55px;
 }
 .navmain-div {
-    margin: 80px 0px 0px 120px;
+    margin: 80px 80px 80px 80px;
     width: 100%;
   
 }
@@ -89,11 +89,12 @@ transform: rotate(220deg);
     display: none;
 }
 .text3{
-    margin: 0px 0px 0px 100px;
-    font-size: 100px;
-    width: 100%;
+    margin: 0px 0px 0px 80px;
+    font-size: 90px;
+    width: 900px;
     word-spacing: 2px;
     letter-spacing: 1px;
+    border: 1px solid white;
 }
 .text4{
     margin: 130px 0px 0px 150px;
